# django-security-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_security_scanner/: __init__.py  apps.py  cli.py
django_security_scanner/core/: __init__.py  patterns.py  scanner.py
django_security_scanner/management/: __init__.py
django_security_scanner/management/commands/: __init__.py  security_scan.py
django_security_scanner/reports/: __init__.py  html_generator.py  json_generator.py
examples/: django_project_example.py  security_config.json
scripts/: create_package_zip.py  publish.py
tests/: __init__.py  test_scanner.py
